light/dark mode bug fixed, responsive version visual bug fixed

--- a/src/global_styles.scss
+++ b/src/global_styles.scss
@@ -40,7 +40,9 @@ body {
   }
   .header {
     position: relative;
-    height: 40px;
+    display: flex;
+    align-items: center;
+    height: 100px;
     width: 100%;
     .logo {
       width: 64px;
